@@ -1,3 +1,14 @@
+2010-06-22  Vangelis Kokkevis  <vangelis@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        Define GraphicsContext3D::platformLayer() for all remaining (non PLATFORM(MAC))
+        ports to get RenderLayerBacking.cpp compiling again.
+        https://bugs.webkit.org/show_bug.cgi?id=41026
+
+        * platform/graphics/GraphicsContext3D.h:
+        (WebCore::GraphicsContext3D::platformLayer):
+
 2010-06-22  Eric Seidel  <eric@webkit.org>
 
         Unreviewed.  Rolling out http://trac.webkit.org/changeset/61638
